# ChangeLog for dev-python/pyserial
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyserial/ChangeLog,v 1.29 2007/07/17 06:23:38 dev-zero Exp $

  17 Jul 2007; Tiziano Müller <dev-zero@gentoo.org> -pyserial-2.0.ebuild:
  Dropped old version

  02 Nov 2006; Olivier Crête <tester@gentoo.org> pyserial-2.2.ebuild:
  Stable on amd64, bug #153589

  25 Sep 2006; Javier Villavicencio <the_paya@gentoo.org>
  pyserial-2.2.ebuild:
  Add ~x86-fbsd keyword.

  30 Aug 2006; Michael Hanselmann <hansmi@gentoo.org> pyserial-2.2.ebuild:
  Stable on ppc.

  12 Aug 2006; Jason Wever <weeve@gentoo.org> pyserial-2.2.ebuild:
  Stable on SPARC.

  12 Aug 2006; Alastair Tse <liquidx@gentoo.org> -pyserial-1.18.ebuild,
  -pyserial-2.1.ebuild, pyserial-2.2.ebuild:
  add CHANGES.txt to installed docs. (#143651)

  09 Aug 2006; Alastair Tse <liquidx@gentoo.org> pyserial-2.2.ebuild:
  stable bump for x86 (#143323)

  04 Jun 2006; Brent Baude <ranger@gentoo.org> pyserial-2.2.ebuild:
  Marking pyserial-2.2 ppc64 stable as a dep to twisted and in turn avahi per
  Mr Bones request

  12 May 2006; Tobias Scherbaum <dertobi123@gentoo.org> pyserial-2.2.ebuild:
  Added ~hppa

  01 May 2006; Markus Rothe <corsair@gentoo.org> pyserial-2.2.ebuild:
  Added ~ppc64

  03 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org> pyserial-2.0.ebuild:
  Stable on sparc

  02 Feb 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fix rmd160 digests.

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> pyserial-2.2.ebuild:
  Mark 2.2 stable on alpha/ia64

*pyserial-2.2 (22 Nov 2005)

  22 Nov 2005; <chrb@gentoo.org> +pyserial-2.2.ebuild:
  version bump

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> pyserial-2.1.ebuild:
  add ~ia64

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> pyserial-2.0.ebuild:
  Stable on ppc.

*pyserial-2.1 (20 Feb 2005)

  20 Feb 2005; Radoslaw Stachowiak <radek@gentoo.org> +pyserial-2.1.ebuild: