@@ -1,4 +1,6 @@
 DIST pyserial-2.2.zip 45470 RMD160 5c743d5c0c5bd2b86738897efaf46404fef4f3a1 SHA1 e2fdf7f22ec930497d96b2177c057dacfdcce887 SHA256 f37c49e29ab9efae5f0ee5004ed34da00436cc0a99810ac4aae53bacec12ab12
+DIST pyserial-2.4.tar.gz 44723 RMD160 c794cbc4bf006628e28a91c975bf897994dec095 SHA1 9536434736aa92da17fd05eed260efd3864ff9bd SHA256 6b6a9e3d2fd5978c92c843e0109918a4bcac481eecae316254481c0e0f7e73c8
 EBUILD pyserial-2.2.ebuild 558 RMD160 6e82b6db4427f7dabbc8bb768c1cd3a81914510b SHA1 67a138b244c0e0c7323dcecbd1f4bcb6b659fe67 SHA256 46e42d1ff5f59060bd83845a3adae2967ae7d526f39e8c9913f732c128fac4f1
-MISC ChangeLog 3119 RMD160 daed23800837426cdc1dad1295d8849ea07b301d SHA1 b2b9660fee6d3fe9a4b1e0c404481ddcba2a476a SHA256 b205205d9253ec5e4a3451146678e3ab238efbfeb059b3b61c6f47c768da5c61
+EBUILD pyserial-2.4.ebuild 631 RMD160 f125b37afb43e3a33ce41b43c7628defa256b2b2 SHA1 04a3dd9103948f8b041123e54804037fb5a47ccb SHA256 eca51a7c7c93cda8d8551c8be1dacd5f6fbc6c34b3c448345c9c4c3e624caebc
+MISC ChangeLog 3254 RMD160 57a8de258d448b2151225006d6bd8e5ab6b6de6d SHA1 0aff75dd928147781e1083234a78b21379da6ee9 SHA256 4aaf2c5ff618aa4a92bb8baa33e164c708565931e5857f24c50829e42694c6b2
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
